# query-builder-generator

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazelrc.common  bazelrc.local
bazel/: yacc.bzl
src/: BUILD  BUILD.bazel  main.go
src/cmd/: BUILD.bazel  root.go
src/compiler/: BUILD  BUILD.bazel  compiler.go  compiler_test.go
src/compiler/java/: BUILD.bazel  interface.go  method.go
src/dom/: BUILD.bazel  document.go  filter.go  operation.go  optional.go  query.go  query.y  query_test.go  statement.go
src/dom/parser/: BUILD  BUILD.bazel  lexer.go  parser.go  query.y  query_test.go
src/examples/: foo.txt  simplequery.qbg
src/lang/java/: BUILD.bazel  interface.go  method.go  void.go
