load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = glob(["*.go"]),
    importpath = "github.com/query-builder-generator/src/dom",
    visibility = ["//visibility:public"],
    deps = [
        "//src/lang/java:go_default_library",
        "@com_github_gertd_go_pluralize//:go_default_library",
    ]
)

go_test(
    name = "go_default_test",
    srcs = glob(["*_test.go"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ]
)