load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//:bazel/yacc.bzl", "go_yacc")

go_yacc(
    yacc="query.y",
    go="query.y.go",
    prefix="Dom"
    )

go_library(
    name = "go_default_library",
    srcs = ["query.y.go"],
    importpath = "github.com/query-builder-generator/src/dom",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = glob(["*_test.go"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ]
)